--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output:
   bookdown::pdf_document2:
     latex_engine: "xelatex"
     toc: false
-linestretch: 2
+linestretch: 1
 abstract: |
   Preregistration is becoming increasingly popular in the psychological sciences.
   At the same time, many researchers struggle to make precise predictions and feel overwhelmed by the need to prespecify every detail of their analysis plan.
@@ -15,8 +15,8 @@ abstract: |
   This objective rests on the relevance of "theoretical risk", a generalization of type-I error rate, for judging the evidential support for theories.
   We propose that preregistration should aim to reduce the uncertainty in judging the theoretical risk instead of directly limiting the type-I error rate.
   We argue that this reformulation extends the utility of preregistration and is more closely aligned with researchers intuition.
-  If we do not know what a researcher did, we have great uncertainty about the theoretical risk they took.
-  This uncertainty severely limits the utility of the researchers' evidence.
+  If we do not know what a researcher did, we have great uncertainty about the theoretical risk they took which severely limits the utility of the researchers' evidence.
+  Preregistration effectively reduces this uncertainty and therefore generates more persuasiveness evidence.
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -54,7 +54,7 @@ In particular, we want to challenge the common view that preregistration somehow
 Deciding if a study is confirmatory or exploratory is a judgment made by the researcher assessing it.
 The issues above arise by delegating this judgment to a simple decision rule.
 That is, if something is preregistered, it is confirmatory, and if it is not preregistered, it is exploratory.
-This rule is often assumed implicitly as a rule of thumb.
+This rule of thumb is often assumed implicitly.
 Other times it is stated as the explicit goal of preregistration.
 In both cases, it leads to confusion when applied outside specific bounds.
 Preregistering an inherently exploratory analysis (like testing dozens of relations) does not make it confirmatory, nor will a carefully conducted confirmatory study become exploratory if the researcher deviates from the preregistration in minor details.
@@ -62,7 +62,7 @@ To uphold the simplicity of the decision rule, it is routinely suggested to only
 Under these conditions, the rule holds, but such restricted use makes preregistration a niche solution unable to match the greater problem of replicability in psychology and elsewhere.
 
 We show that this simple decision rule is a special case of a more general conceptualization under Bayesian reasoning.
-To that end, we first introduce some tools of Bayesian philosophy of science and map the exploration/confirmation distinction onto a dimensional quantity we call "theoretical risk", which is inversely related to type I error rate.
+To that end, we first introduce some tools of Bayesian philosophy of science and map the exploration/confirmation distinction onto a dimensional quantity we call "theoretical risk" (a term borrowed from Meehl), which is inversely related to type I error rate.
 We then propose two interpretations of how theoretical risk is influenced by preregistration.
 The first interpretation corresponds to the traditional application of preregistration to research paradigms that focus on confirmation by maximizing the theoretical risk or equivalently limiting type I error.
 The second interpretation is our main contribution and shows the broad applicability of preregistration for both exploratory and confirmatory studies that are implemented as preregistered or have undergone changes.
@@ -99,9 +99,6 @@ Without deliberating these concepts further, we find it persuasive that research
 The axioms of probability are sufficient to derive the famous Bayes formula, on which we will heavily rely for our arguments.
 Please note that our decision to adopt this aspect of the Bayesian philosophy of science does not imply anything about the statistical methods researchers use.
 In fact, this conceptualization is purposefully reductionistic to be compatible with a wide range of philosophies of science and statistical methods researchers might subscribe to.
-Our conclusions can be applied to bayesian and frequentist methods alike.
-Of course, frequentist methods are traditionally viewed from a Popperian philosophy of science, but our conclusions are compatible with this view and notable later advancements like the error statistical view.
-However, those philosophies of science require a much richer set of assumptions that are not quite necessary for the points we want to make about the value of preregistration.
 
 # Epistemic Value and Theoretical Risk
 
@@ -119,9 +116,12 @@ P(H|E) = \frac{P(H)P(E|H)}{P(E)}
 $$
 
 $P(H|E)$ is of great relevance since $P(H|E)$ is often used directly or indirectly as a measure of corroboration of a hypothesis.
-In carnaps tradition, in its direct use, it is called corroboration as firmness; in its relation to $P(H)$, it is called increase in firmness.
+In carnaps tradition, in its direct use, it is called corroboration as firmness; in its relation to $P(H)$, it is called increase in firmness.[^corroboration]
+<!--I think I get myself in hot water here, one the one hand I claim compatibility of hypo-deductive methods and the other hand I appeal to carnap!!!-->
 We refrain from discussing specific measures of corroboration since no measure shows universally better properties than others.
 However, it is generally expected that any measure of corroboration increases monotonically with an increase in $P(H|E)$.
+
+[^corroboration]: This move to assume measures of corroboration is a leap of faith and not covered by the Dutch book argument we make earlier, so a falsificationist can rightfully reject it.
 
 In short, we want to increase $P(H|E)$.
 Increases in $P(H|E)$ are associated with increased epistemic value, of which we want to maximize the expectation.
